# Project-Management

./: README.md  meson.build
artefacts/: agreement.tex  burn-down-chart-2-electric-boogaloo.tex  burn-down-chart.tex  demo.webm  dungeon (1).h  journal.tex  monster.h  ready-done.tex  sprint-meeting-2-electric-boogaloo.tex  sprint-meeting.tex  sprint-retrospective.tex  user-stories.tex
src/: dungeon.c  dungeon.h  main.c  monster.c  monster.h  oubliette.h  player.c  player.h
